finished hobby2 page

--- a/MyWebsite/hobby2.html
+++ b/MyWebsite/hobby2.html
@@ -42,5 +42,8 @@
 </form>
 <hr>
 </body>
-
+<h1>Video Games</h1>
+<p>I've been a fan of games all my life. They have been a constant thorugh most of it. <br>
+Its a way I spend time with my friends, a way I learn more about the world, and a way to experience <br>
+a unique form of art.</p>
 </html>
