--- a/hobby2.html
+++ b/hobby2.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset= "UTF-8">
         <title>Pearson's Website</title>
-    </head>
-    <style>
+
+        <style>
         h1{
             background-color: rgba(235, 234, 225, 0.7);
             border-radius: 10px;
@@ -24,32 +24,28 @@
         body{
             background-color: rgb(240, 218, 172);
             font-family: 'Arial';
-            
+            font-size: 18px;
         }
         p{
             background-color: rgba(235, 234, 225, 0.7);
             border-radius: 10px;
             max-width: fit-content;
             padding:3px;
-            font-size: 16px;
         }
         
     </style>
-<body>
-   
-<h1>Hobbies</h1>
-<a href = "./hobby1.html"><h3>Music</h3></a>
-<p>I have played piano since I was about 8 years old and still frequently play to this day.
-    I love playing Jazz and ragtimes.</p>
-<a href = "./hobby2.html"><h3>Video Games</h3></a>
-<p>I have less time to play video games nowadays because of by schedule, so I try and seek out games
-    that are more like meaningful statements or art pieces than just thoughtless grinds.
-</p>
-<h1>Fun Facts</h1>
-<h3>Birthplace</h3>
-<p>I was born and raised in Dothan AL, about 2 and a half hours south of auburn.</p>
-<h3>Family</h3>
-<p>I have 7 siblings, 4 brothers 3 sisters, so the holidays are always exciting.</p>
+    </head>
 
+<body>
+<form style="display: inline" action="index.html" method="get">
+<button>Home</button>
+</form>
+<hr>
 </body>
+<h1>Video Games</h1>
+<p>I've been a fan of games all my life. They have been a constant thorugh most of it. <br>
+Its a way I spend time with my friends, a way I learn more about the world, and a way to experience <br>
+a unique form of art.</p>
+
+<img style = "max-width: 800px; max-height: 600px;" src = "./mom showing her fun how to play the game pong.jpg" alt = "mom showing her fun how to play the game pong">
 </html>
